--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             <p>Question Number: <span class="questionNumber">0</span>/5</p>
             <p>Total Score: <span class="storedScored">0</span></p>
             <button type="button" class="start-button">Start Quiz</button>
+            <fieldset class="main">
+                
+            </fieldset>
 
         </form>
         <script src="https://code.jquery.com/jquery-3.5.0.js" integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc="
