working correct incorrect

--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <body>
         <form>
             <p>Question Number: <span class="question-number">0</span>/5</p>
-            <p>Total Score: <span class="stored-scored">0</span></p>
+            <p>Total Score: <span class="stored-scored">0</span> Correct <span class="stored-incorrect">0</span> Incorrect</p>
             <button type="button" class="start-button">Start Quiz</button>
             <fieldset class="main">
+                <p class="options"></p>
                 
             </fieldset>
+            <button type="button" class="next-button hidden">Next</button>
 
             
         </form>
