--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
             <p>Total Score: <span class="stored-scored">0</span> Correct <span class="stored-incorrect">0</span> Incorrect</p>
             <button type="button" class="start-button">Start Quiz</button>
             <fieldset class="main">
-                <p class="options"></p>
                 
             </fieldset>
             <button type="button" class="next-button hidden">Next</button>
+            <button type="button" class="test-score-button hidden">See Your Test Score</button>
+            <button type="button" class="reset hidden">Reset Quiz</button>
+            <p class="js-answer"></p>
 
             
         </form>
