--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <button type="button" class="js-start-button">Start Quiz</button>
                 <button type="button" class="js-next-button hidden">Next</button>
                 <button type="button" class="js-finish-quiz hidden">Finish Quiz</button>
+                <p class='js-answer'></p>
             
                 <button type="button" class="js-reset hidden">Reset Quiz</button>
             </div>
